A.F.I..PS. [ZBXNEXT-1241] added host inventory mode setting for new and discovered hosts (Gunars, Sasha, wiper)
...G...... [ZBXNEXT-494] added support for proc.cpu.util key on Linux and Solaris platforms (wiper)
A.F....... [ZBX-1357] updated Czech and Japanese translations; thanks to Zabbix translators (Richlv)

Bug fixes:
A......... [ZBX-9738] fixed deletion of related action operations when deleting a host group (Gunars)
..F....... [ZBX-9625] fixed interface list bug in host form (Gunars)
..F....... [ZBX-9804] fixed monitoring graph scroller and calendar (Gunars)
..F....... [ZBX-9607] fixed step form in web scenario (Gunars, Sasha)
..F....... [ZBX-9791] fixed typo in maps.inc.php (Gunars)
.......PS. [ZBX-9668] improved handling of VMware performance counter instances without data (wiper)
........S. [ZBX-9677] fixed compilation warnings in the escalator.s module (igors)
...G...PS. [ZBX-9682] fixed parsing of numeric item key parameters (igors)
..F....... [ZBX-9516] fixed displaying of the "Go" button after deleting applications (Gunars)
..F....... [ZBX-9639] fixed chart width validation (Gunars)
........S. [ZBX-9729] fixed replacement of {MACRO<1-9>} with {MACRO} where only {MACRO} is acceptable (gleb, wiper)
..F....... [ZBX-9809] fixed action operation validation (Gunars)
........S. [ZBX-9814] fixed function prototype declaration created in ZBXNEXT-2760 (wiper)
...G...... [ZBX-9716] fixed possible event record number wraparound issues in the old Windows Eventing support (wiper)
...G...... [ZBX-9258] fixed Alias for log[], logrt[] and eventlog[] (gleb)

--------------------------------------------------------------------------------
Changes for 2.5.0

New features:
..F....... [ZBXNEXT-2703] implemented feature to filter dashboard by trigger name (Ivo)
A.F.I...S. [ZBXNEXT-2892] increased IP range length and added support for tabulation, carriage return and newline characters (Ivo, wiper)